--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "online-dress-store",
   "version": "0.0.1",
   "scripts": {
-    "dev": "svelte-kit dev",
+    "dev": "GOOGLE_APPLICATION_CREDENTIALS=./serviceAccountKey.json svelte-kit dev",
     "build": "svelte-kit build",
-    "preview": "svelte-kit preview",
+    "preview": "GOOGLE_APPLICATION_CREDENTIALS=./serviceAccountKey.json svelte-kit preview",
     "lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "format": "prettier --write --plugin-search-dir=. ."
   },
@@ -22,6 +22,9 @@
   "dependencies": {
     "@fontsource/fira-mono": "^4.2.2",
     "@lukeed/uuid": "^2.0.0",
-    "cookie": "^0.4.1"
+    "cookie": "^0.4.1",
+    "firebase": "^8.8.0",
+    "firebase-admin": "^9.11.0",
+    "firebase-functions": "^3.14.1"
   }
 }
