--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-  "name": "online-dress-store",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "GOOGLE_APPLICATION_CREDENTIALS=./serviceAccountKey.json svelte-kit dev",
-    "build": "svelte-kit build",
-    "preview": "GOOGLE_APPLICATION_CREDENTIALS=./serviceAccountKey.json svelte-kit preview",
-    "lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --write --plugin-search-dir=. ."
-  },
-  "author": "Sumit Rai <sumit.rai1987@gmail.com>",
-  "devDependencies": {
-    "@sveltejs/kit": "next",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-svelte3": "^3.2.0",
-    "prettier": "~2.2.1",
-    "prettier-plugin-svelte": "^2.2.0",
-    "svelte": "^3.34.0"
-  },
-  "type": "module",
-  "dependencies": {
-    "@fontsource/fira-mono": "^4.2.2",
-    "@lukeed/uuid": "^2.0.0",
-    "cookie": "^0.4.1",
-    "firebase": "^8.8.0",
-    "firebase-admin": "^9.11.0",
-    "firebase-functions": "^3.14.1"
-  }
+	"name": "online-dress-store",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "GOOGLE_APPLICATION_CREDENTIALS=./serviceAccountKey.json svelte-kit dev",
+		"build": "npx rimraf build && svelte-kit build --verbose",
+		"preview": "GOOGLE_APPLICATION_CREDENTIALS=./serviceAccountKey.json svelte-kit preview",
+		"lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+		"format": "prettier --write --plugin-search-dir=. ."
+	},
+	"author": "Sumit Rai <sumit.rai1987@gmail.com>",
+	"devDependencies": {
+		"@sveltejs/kit": "next",
+		"eslint": "^7.22.0",
+		"eslint-config-prettier": "^8.1.0",
+		"eslint-plugin-svelte3": "^3.2.0",
+		"prettier": "~2.2.1",
+		"prettier-plugin-svelte": "^2.2.0",
+		"svelte": "^3.34.0",
+		"svelte-adapter-firebase": "^0.11.0"
+	},
+	"type": "module",
+	"dependencies": {
+		"@fontsource/fira-mono": "^4.2.2",
+		"@lukeed/uuid": "^2.0.0",
+		"cookie": "^0.4.1",
+		"firebase": "^8.8.0",
+		"firebase-admin": "^9.11.0",
+		"firebase-functions": "^3.14.1"
+	}
 }
