--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"build": "npx rimraf build && svelte-kit build --verbose",
 		"preview": "GOOGLE_APPLICATION_CREDENTIALS=./serviceAccountKey.json svelte-kit preview",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --write --plugin-search-dir=. ."
+		"format": "prettier --write --plugin-search-dir=. .",
+		"deploy": "firebase use dress-catalog && firebase deploy"
 	},
 	"author": "Sumit Rai <sumit.rai1987@gmail.com>",
 	"devDependencies": {
@@ -24,7 +25,7 @@
 		"@fontsource/fira-mono": "^4.2.2",
 		"@lukeed/uuid": "^2.0.0",
 		"cookie": "^0.4.1",
-		"firebase": "^8.8.0",
+		"firebase": "^9.0.1",
 		"firebase-admin": "^9.11.0",
 		"firebase-functions": "^3.14.1"
 	}
