Add firebase deployment

--- a/functions/package.json
+++ b/functions/package.json
@@ -4,9 +4,14 @@
 	"private": true,
 	"scripts": {
 		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
-		"build": "echo BUILD"
+		"build": "rollup --config"
 	},
 	"dependencies": {
 		"firebase-functions": "^3.7.0"
+	},
+	"devDependencies": {
+		"@rollup/plugin-commonjs": "^20.0.0",
+		"@rollup/plugin-node-resolve": "^13.0.4",
+		"rollup": "^2.56.3"
 	}
 }
