Add firebase deployment

--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
 		"build": "npx rimraf build && svelte-kit build --verbose",
 		"preview": "GOOGLE_APPLICATION_CREDENTIALS=./serviceAccountKey.json svelte-kit preview",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+        "test": "echo TEST",
 		"format": "prettier --write --plugin-search-dir=. .",
 		"deploy": "firebase deploy",
-		"deploy:hosting": "firebase deploy --hosting",
-		"deploy:sveltekit": "firebase deploy --only \"functions:sveltekit\" --debug"
+		"deploy:hosting": "firebase deploy --only hosting",
+		"deploy:sveltekit": "firebase deploy --only \"functions:sveltekit\""
 	},
 	"author": "Sumit Rai <sumit.rai1987@gmail.com>",
 	"devDependencies": {
