--- a/functions/package.json
+++ b/functions/package.json
@@ -7,6 +7,7 @@
 		"build": "rollup --config"
 	},
 	"dependencies": {
+		"firebase-admin": "^9.11.0",
 		"firebase-functions": "^3.7.0"
 	},
 	"devDependencies": {
