--- a/functions/package.json
+++ b/functions/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"scripts": {
 		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
+        "test": "echo TEST",
 		"build": "rollup --config"
 	},
 	"dependencies": {
