--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,10 @@ jobs:
           node-version: '14'
           cache: 'npm'
       - run: npm install
+      - run: cd functions
+      - run: npm install
+      - run: npm run build
+      - run: cd -
       - run: npm run build
       - run: npm run test
       - run: echo "🍏 Job Status is ${{ job.status }}."
