--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,10 +17,7 @@ jobs:
           node-version: '14'
           cache: 'npm'
       - run: npm install
-      - run: cd functions
-      - run: npm install
-      - run: npm run build
-      - run: cd -
+      - run: cd functions && npm install && npm run build && cd -
       - run: npm run build
       - run: npm run test
       - run: echo "🍏 Job Status is ${{ job.status }}."
