--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"build": "npx rimraf build && svelte-kit build --verbose",
 		"preview": "GOOGLE_APPLICATION_CREDENTIALS=./serviceAccountKey.json svelte-kit preview",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-        "test": "echo TEST",
+		"test": "echo TEST",
 		"format": "prettier --write --plugin-search-dir=. .",
 		"deploy": "firebase deploy",
 		"deploy:hosting": "firebase deploy --only hosting",
@@ -18,6 +18,7 @@
 		"eslint": "^7.22.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-svelte3": "^3.2.0",
+		"firebase-tools": "^9.17.0",
 		"prettier": "~2.2.1",
 		"prettier-plugin-svelte": "^2.2.0",
 		"svelte": "^3.34.0",
