--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,4 +20,9 @@ jobs:
       - run: cd functions && npm install && npm run build && cd -
       - run: npm run build
       - run: npm run test
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DRESS_CATALOG }}'
+          projectId: dress-catalog
       - run: echo "🍏 Job Status is ${{ job.status }}."
