--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -18,6 +18,7 @@ jobs:
       - run: npm run build
       - run: npm run test
       - run: echo "🔎 Deploying latest code to firebase"
+      - run: npm run deploy:hosting
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
