--- a/firebase.json
+++ b/firebase.json
@@ -14,6 +14,7 @@
       "**/.*",
       "**/node_modules/**"
     ],
+    "predeploy": ["npm run build"],
     "rewrites": [
       {
         "source": "**",
