Deploy functions as well

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -18,6 +18,11 @@ jobs:
       - run: npm run build
       - run: npm run test
       - run: echo "🔎 Deploying latest code to firebase"
+      - uses: w9jds/firebase-action@master
+      - with:
+          args: deploy --only functions
+        env:
+          GCP_SA_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_DRESS_CATALOG }}
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
