--- a/firebase.json
+++ b/firebase.json
@@ -2,8 +2,8 @@
 	"functions": {
 		"source": "functions",
 		"predeploy": [
-			"npm --prefix \"$RESOURCE_DIR\" run lint",
-			"npm --prefix \"$RESOURCE_DIR\" run build"
+			"npm --prefix \"$RESOURCE_DIR\" run build",
+			"npm --prefix \"$RESOURCE_DIR\" run test"
 		],
 		"runtime": "nodejs14"
 	},
