--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -19,7 +19,7 @@ jobs:
       - run: npm run test
       - run: echo "🔎 Deploying latest code to firebase"
       - uses: w9jds/firebase-action@master
-      - with:
+        with:
           args: deploy --only functions
         env:
           GCP_SA_KEY: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_DRESS_CATALOG }}
