--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -14,19 +14,12 @@ jobs:
           node-version: '14'
           cache: 'npm'
       - run: npm install
-      - run: cd functions && npm install && npm run build && cd -
       - run: npm run build
       - run: npm run test
       - run: echo "🔎 Deploying latest code to firebase"
       - uses: w9jds/firebase-action@master
         with:
-          args: deploy --only functions
+          args: deploy
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-      - uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DRESS_CATALOG }}'
-          channelId: live
-          projectId: dress-catalog
       - run: echo "🍏 Job Status is ${{ job.status }}."
