--- a/firebase.json
+++ b/firebase.json
@@ -2,6 +2,7 @@
 	"functions": {
 		"source": "functions",
 		"predeploy": [
+            "npm install",
 			"npm --prefix \"$RESOURCE_DIR\" run build",
 			"npm --prefix \"$RESOURCE_DIR\" run test"
 		],
