--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -14,6 +14,7 @@ jobs:
           node-version: '14'
           cache: 'npm'
       - run: npm install
+      - run: cd functions && npm install && npm run build && cd -
       - run: npm run build
       - run: npm run test
       - run: echo "🔎 Deploying latest code to firebase"
