--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -20,7 +20,13 @@ jobs:
       - run: echo "🔎 Deploying latest code to firebase"
       - uses: w9jds/firebase-action@master
         with:
-          args: deploy
+          args: deploy --only functions
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DRESS_CATALOG }}'
+          channelId: live
+          projectId: dress-catalog
       - run: echo "🍏 Job Status is ${{ job.status }}."
