--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,13 @@
 {
 	"functions": {
 		"source": "functions",
-		"predeploy": [
-			"npm --prefix \"$RESOURCE_DIR\" run build",
-			"npm --prefix \"$RESOURCE_DIR\" run test"
-		],
+		"predeploy": [],
 		"runtime": "nodejs14"
 	},
 	"hosting": {
 		"public": "build",
 		"ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-		"predeploy": ["npm run build"],
+		"predeploy": [],
 		"rewrites": [
 			{
 				"source": "**",
