--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,5 @@
 name: build-action
 on:
-  push:
-    branches:
-      - main
   pull_request:
     branches:
       - main
@@ -19,7 +16,18 @@ jobs:
       - run: npm install
       - run: cd functions && npm install && npm run build && cd -
       - run: npm run build
+      - uses: jsdaniell/create-json@1.1.2
+        with:
+          name: 'serviceAccountKey.json'
+          json: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+          dir: 'functions/sveltekit/'
       - run: npm run test
+      - run: echo "🔎 Deploying latest code to firebase"
+      - uses: w9jds/firebase-action@master
+        with:
+          args: deploy --only functions
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
