--- a/package.json
+++ b/package.json
@@ -19,22 +19,22 @@
 	},
 	"author": "Sumit Rai <sumit.rai1987@gmail.com>",
 	"devDependencies": {
-		"@sveltejs/kit": "^1.0.0-next.195",
+		"@sveltejs/kit": "^1.0.0-next.201",
 		"eslint": "^8.4.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
-		"firebase-tools": "^9.22.0",
+		"firebase-tools": "^9.23.0",
+		"husky": "^7.0.0",
 		"prettier": "~2.2.1",
-		"prettier-plugin-svelte": "^2.4.0",
-		"svelte": "^3.44.1",
-		"svelte-adapter-firebase": "^0.11.2",
-		"husky": "^7.0.0"
+		"prettier-plugin-svelte": "^2.5.0",
+		"svelte": "^3.44.2",
+		"svelte-adapter-firebase": "^0.11.2"
 	},
 	"type": "module",
 	"dependencies": {
 		"@lukeed/uuid": "^2.0.0",
 		"cookie": "^0.4.1",
-		"firebase": "^9.3.0",
+		"firebase": "^9.6.0",
 		"firebase-admin": "^9.12.0",
 		"firebase-functions": "^3.16.0"
 	}
