--- a/package.json
+++ b/package.json
@@ -1,37 +1,40 @@
 {
 	"name": "online-dress-store",
-	"version": "0.0.1",
+	"version": "0.1.0",
 	"scripts": {
 		"dev": "GOOGLE_APPLICATION_CREDENTIALS=./serviceAccountKey.json svelte-kit dev",
 		"build": "npx rimraf build && svelte-kit build --verbose",
 		"build:functions": "cd functions && npm install && npm run build && cd -",
 		"build:production": "npm run build:functions && npm run build",
 		"preview": "GOOGLE_APPLICATION_CREDENTIALS=./serviceAccountKey.json svelte-kit preview",
-		"lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+		"lint": "prettier --check --plugin-search-dir=. . && npm run lint:eslint",
+		"lint:eslint": "eslint .",
+		"lint:fix": "eslint --fix .",
 		"test": "echo TEST",
 		"format": "prettier --write --plugin-search-dir=. .",
 		"deploy": "firebase deploy --project dress-catalog",
 		"deploy:hosting": "firebase deploy --only hosting --project dress-catalog",
-		"deploy:sveltekit": "firebase deploy --only \"functions:sveltekit\" --project dress-catalog"
+		"deploy:sveltekit": "firebase deploy --only \"functions:sveltekit\" --project dress-catalog",
+		"prepare": "husky install"
 	},
 	"author": "Sumit Rai <sumit.rai1987@gmail.com>",
 	"devDependencies": {
-		"@sveltejs/kit": "^1.0.0-next.195",
-		"eslint": "^7.32.0",
-		"eslint-config-prettier": "^8.1.0",
+		"@sveltejs/kit": "^1.0.0-next.201",
+		"eslint": "^8.4.0",
+		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
-		"firebase-tools": "^9.22.0",
+		"firebase-tools": "^9.23.0",
+		"husky": "^7.0.0",
 		"prettier": "~2.2.1",
-		"prettier-plugin-svelte": "^2.4.0",
-		"svelte": "^3.44.1",
+		"prettier-plugin-svelte": "^2.5.0",
+		"svelte": "^3.44.2",
 		"svelte-adapter-firebase": "^0.11.2"
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource/fira-mono": "^4.2.2",
 		"@lukeed/uuid": "^2.0.0",
 		"cookie": "^0.4.1",
-		"firebase": "^9.3.0",
+		"firebase": "^9.6.0",
 		"firebase-admin": "^9.12.0",
 		"firebase-functions": "^3.16.0"
 	}
