--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,5 +1,8 @@
 name: Dependabot auto merge
 on: pull_request_target
+permissions:
+  pull-requests: write
+  contents: write
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
