--- a/functions/package.json
+++ b/functions/package.json
@@ -6,6 +6,9 @@
 		"test": "echo TEST",
 		"build": "rollup --config"
 	},
+	"engines": {
+		"node": "16"
+	},
 	"dependencies": {
 		"firebase-admin": "^9.11.0",
 		"firebase-functions": "^3.16.0"
